Fix language button ios border

--- a/src/common/theme.scss
+++ b/src/common/theme.scss
@@ -175,3 +175,23 @@ html.ios {
     --ion-background-color: transparent;
   }
 }
+
+
+.pretty-button {
+  left: 50%;
+  transform: translateX(-50%);
+  top: 50%;
+  width: 70%;
+  margin-bottom: 10px;
+  --inner-border-width: 0;
+
+  box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.18), 0 6px 12px 0 rgba(0, 0, 0, 0.17),
+    0 1px 1px 0 rgba(0, 0, 0, 0.17);
+
+  border-radius: 5px;
+
+  p {
+    width: 100%;
+    text-align: center;
+  }
+}
